Added skeleton of JavaFX.