@@ -4,6 +4,7 @@ apply plugin: 'idea'
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
 apply plugin: 'project-report'
+apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/0.3.0/javafx.plugin"
 
 
 group = 'edu.mype'
@@ -70,7 +71,7 @@ idea {
         //scopes.PROVIDED.plus += configurations.provided
 
         //if 'content root' (as IDEA calls it) of the module is different
-//        contentRoot = file('my-module-content-root')
+        // contentRoot = file('my-module-content-root')
 
         //if you love browsing Javadoc
         downloadJavadoc = true
@@ -78,4 +79,70 @@ idea {
         //and hate reading sources :)
         downloadSources = true
     }
+}
+
+javafx {
+    appID 'PismFX'
+    appName 'Prismatic'
+    mainClass 'edu.mype.prismandr.fx.PrismaticFX'
+
+    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+    systemProperties = ['prism.disableRegionCaching': 'true']
+    arguments = ['-l', '--fast']
+
+    embedLauncher = false
+
+    // deploy/info attributes
+    category = 'Demos'
+    copyright = 'Copyright (c) 2013 Mype'
+    description = 'This is a sample configuration, it is not real.'
+    licenseType = 'Apache 2.0'
+    vendor = 'Mype'
+    installSystemWide = true
+    menu = true
+    shortcut = true
+/*
+ // app icons
+ icons {
+     shortcut = ['shortcut-16.png', 'shortcut-32.png', 'shortcut-128.png', 'shortcut-256.png', 'shortcut-16@2x.png', 'shortcut-32@2x.png', 'shortcut-128@2x.png']
+     volume = 'javafx-icon.png'
+     setup = 'javafx-icon.png'
+ }
+
+ // applet and webstart stuff
+ debugKey {
+     alias = 'debugKey'
+     //keyPass = 'password' // provide via command line
+     keyStore = file('~/keys/debug.jks')
+     //storePass = 'password'  // provide via command line
+ }
+ releaseKey {
+     alias = 'production'
+     //keyPass = 'password' // provide via command line
+     keyStore = file('/Volumes/ProdThumbDrive/production.jks')
+     //storePass = 'password'  // provide via command line
+ }
+ signingMode 'release'
+
+ width = 800
+ height = 600
+ embedJNLP = false
+    codebase = 'http://example.com/bogus/JNLP/Codebase'
+
+ // arbitrary jnlp icons
+    icon {
+        href = 'src/main/resources/javafx-icon.png'
+        kind = 'splash'
+        width = 128
+        height = 128
+    }
+    icon {
+        href = 'shortcut-32@2x.png'
+        kind = 'selected'
+        width = 16
+        height = 16
+        scale = 1
+    }
+
+ */
 }
